Added more modulable inheritance to easily add new recipe from different mods